--- a/23_REST_REACT/client/src/global.css
+++ b/23_REST_REACT/client/src/global.css
@@ -36,7 +36,7 @@ form input {
     background: #251FC5;
     border: 0;
     border-radius: 8px;
-    color: #1818c4;
+    color: #000000;
     font-weight: 700;
     margin-top: 16px;
     display: inline-block;
