--- a/23_REST_REACT/client/src/global.css
+++ b/23_REST_REACT/client/src/global.css
@@ -33,10 +33,10 @@ form input {
 .button{
     width: 100%;
     height: 60px;
-    background: #1a1a22;
+    background: #251FC5;
     border: 0;
     border-radius: 8px;
-    color: #000000;
+    color: #FFF;
     font-weight: 700;
     margin-top: 16px;
     display: inline-block;
